@@ -1,128 +1,33 @@
-/*
- * This file was generated by the Gradle 'init' task.
- */
-
-
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.6.14'
-    id 'io.spring.dependency-management' version '1.1.4'
-}
-
-group = 'com.min.store'
-version = '0.0.1-SNAPSHOT'
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
+buildscript {
+    ext {
+        springBootVersion = '3.2.5'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
-repositories {
-    mavenCentral()
-}
+allprojects {
+    group = 'com.store'
+    version = '1.0.0-SNAPSHOT'
 
-dependencies {
-    // jpa
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-
-    // Jasypt
-    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
-
-    // maria db
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.1'
-
-    // redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-
-    // jwt
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-    // lombok
-    compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-
-    // querydsl
-    implementation 'com.querydsl:querydsl-jpa'
-    implementation 'com.querydsl:querydsl-apt'
-
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
-    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
-    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
-
-    //validate
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    runtimeOnly 'com.h2database:h2'
-
-    // webclient
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-def querydslSrcDir = 'src/main/generated'
-sourceSets {
-    main {
-        java {
-            srcDirs += [ querydslSrcDir ]
-        }
+    repositories {
+        mavenCentral()
     }
 }
 
-compileJava {
-    options.compilerArgs << '-Aquerydsl.generatedAnnotationClass=javax.annotation.Generated'
-}
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
-tasks.withType(JavaCompile) {
-    options.generatedSourceOutputDirectory = file(querydslSrcDir)
-}
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
 
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += "--enable-preview"
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs += "--enable-preview"
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += "--enable-preview"
-}
-
-clean {
-    delete file(querydslSrcDir)
-}
-
-jar {
-    enabled = true
-}
-
-tasks.named('bootJar') {
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
-bootJar {
-    archiveFileName = 'jtocean.jar'
-    dependsOn processResources
-}
-
-processResources {
-    from('src/main/resources') {
-        include '**/*'
+    dependencies {
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
-}
-
-springBoot {
-    buildInfo()
 }
